// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Barcode scanner does not show the overlay when the user opts out of it 1`] = `
<div>
  <div
    class="mx-barcode-scanner"
    style="width: 100%; height: 100%;"
  >
    <div
      class="mx-barcode-scanner-content"
    >
      <video
        class="video"
      />
    </div>
  </div>
</div>
`;

exports[`Barcode scanner renders video and overlay correctly 1`] = `
<div>
  <div
    class="mx-barcode-scanner"
    style="width: 100%; height: 100%;"
  >
    <div
      class="mx-barcode-scanner-content"
    >
      <video
        class="video"
      />
      <div
        class="video-canvas"
      >
        <div
          class="canvas-left canvas-background"
        />
        <div
          class="canvas-middle"
        >
          <div
            class="canvas-middle-top canvas-background"
          />
          <div
            class="canvas-middle-middle"
          >
            <div
              class="corner corner-top-left"
            />
            <div
              class="corner corner-top-right"
            />
            <div
              class="corner corner-bottom-right"
            />
            <div
              class="corner corner-bottom-left"
            />
          </div>
          <div
            class="canvas-middle-bottom canvas-background"
          />
        </div>
        <div
          class="canvas-right canvas-background"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Barcode scanner shows an appropriate error when the mediaDevices API is not present (like over http) 1`] = `
<div>
  <div
    class="alert alert-danger"
  >
    The barcode scanner widget is only compatible with certain browsers and requires a secure HTTPS connection in certain browsers. If you encounter this error message as an user, please contact your system administrator. If you are a Mendix developer, please refer to the appropriate docs on how to resolve this issue.
  </div>
</div>
`;
